# PrimeWorldEditor

./: .gitignore  CMakeLists.txt  README.md  dewfile.json
src/Core/: CAudioManager.cpp  CLightParameters.h  CMakeLists.txt  CRayCollisionTester.cpp  CRayCollisionTester.h  CompressionUtil.cpp  IProgressNotifier.h  NCoreTests.cpp  NRangeUtils.h  SRayIntersection.h
src/Core/GameProject/: AssetNameGeneration.cpp  CAssetNameMap.cpp  CAssetNameMap.h  CDependencyTree.cpp  CDependencyTree.h  CGameExporter.cpp  CGameExporter.h  CGameInfo.cpp  CGameInfo.h  CGameProject.cpp  CGameProject.h  COpeningBanner.cpp  CPackage.cpp  CPackage.h  CResourceEntry.cpp  CResourceEntry.h  CResourceIterator.h  CResourceStore.cpp  CResourceStore.h  CVirtualDirectory.cpp  CVirtualDirectory.h  DependencyListBuilders.cpp  DependencyListBuilders.h
src/Core/OpenGL/: CDynamicVertexBuffer.cpp  CFramebuffer.cpp  CFramebuffer.h  CIndexBuffer.cpp  CIndexBuffer.h  CShader.cpp  CShader.h  CShaderGenerator.cpp  CVertexBuffer.cpp  GLCommon.h
src/Core/Render/: CCamera.cpp  CCamera.h  CDrawUtil.cpp  CDrawUtil.h  CGraphics.cpp  CGraphics.h  CRenderBucket.cpp  CRenderer.cpp  CRenderer.h  FRenderOptions.h  SRenderablePtr.h  SViewInfo.h
src/Core/Resource/: CAudioGroup.h  CAudioMacro.h  CDependencyGroup.h  CFont.cpp  CFont.h  CLight.cpp  CLight.h  CMapArea.h  CMaterial.cpp  CMaterial.h  CMaterialPass.cpp  CMaterialPass.h  CMaterialSet.h  CResTypeInfo.cpp  CResTypeInfo.h  CResource.h  CSavedStateID.h  CTexture.cpp  CTexture.h  CWorld.cpp  CWorld.h  EResType.cpp  EResType.h
src/Core/Scene/: CCharacterNode.cpp  CCharacterNode.h  CCollisionNode.cpp  CCollisionNode.h  CLightNode.cpp  CLightNode.h  CModelNode.cpp  CModelNode.h  CRootNode.h  CScene.cpp  CScene.h  CSceneIterator.cpp  CSceneIterator.h  CSceneNode.cpp  CSceneNode.h  CScriptAttachNode.cpp  CScriptAttachNode.h  CScriptNode.cpp  CScriptNode.h  CStaticNode.cpp  CStaticNode.h  ENodeType.h  FShowFlags.h
src/Core/ScriptExtra/: CDamageableTriggerExtra.cpp  CDamageableTriggerExtra.h  CDoorExtra.cpp  CDoorExtra.h  CScriptExtra.cpp  (+6 more)
(+281 files in other folders)
